similar players done

--- a/app/templates/WrongInput.html
+++ b/app/templates/WrongInput.html
@@ -59,10 +59,7 @@
             .attr("font-style", "italic")
 </script>
 <center>
-    <h2>Here are the most similar players we found: </h2>
-    {% for name in result %}
-        <p>{{ name }}&nbsp&nbsp&nbsp&nbsp&nbsp<a href={{ urls[loop.index0] }}>wiki link</a></p>
-    {% endfor %}
+    <h2>We cannot find the name you input, please try again.</h2>
 </center>
 </body>
 <script>
