--- a/app/templates/simTeam.html
+++ b/app/templates/simTeam.html
@@ -1,13 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>    
-    <meta charset="UTF-8">    
-    <title>Experiment</title>
+<meta charset="utf-8">
+<head>
+    <meta charset="utf-8">
+    <title>
+        CS 6400 - NBA Players
+    </title>
+    <style>
+        .theme {
+            font-family: "Helvetica Neue";
+            fill: #6699CC;
+            font-style: italic;
+            background-position: center;
+        }
+    </style>
 </head>
+
 <body>
-<h1>=.=</h1>
-{% for name in result %}
-<p>{{ name }}</p>
-{% endfor %}
 </body>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script>
+    width = document.body.offsetWidth;
+    if (width < 1000) {
+        width = 1000;
+    }
+    svg0 = d3.select("body")
+            .append("svg")
+            .attr("width", width)
+            .attr("height", 400);
+    svg0.append("rect")
+            .attr("x", 50)
+            .attr("y", 50)
+            .attr("width", width - 100)
+            .attr("height", 350)
+            .attr("rx", 30)
+            .attr("ry", 30)
+            .attr("fill", "#6699CC");
+    svg0.append("text")
+            .text("CS 6400 Course project")
+            .attr("x", 100)
+            .attr("y", 150)
+            .attr("font-size", "50px")
+            .attr("fill", "white")
+            .attr("font-family", "Helvetica Neue")
+    svg0.append("text")
+            .text("NBA Players and Teams Analysis")
+            .attr("x", 100)
+            .attr("y", 260)
+            .attr("font-size", "70px")
+            .attr("fill", "white")
+            .attr("font-family", "Helvetica Neue")
+    svg0.append("text")
+            .text(" - By team 8.")
+            .attr("x", width / 2)
+            .attr("y", 380)
+            .attr("font-size", "16px")
+            .attr("fill", "white")
+            .attr("font-family", "Helvetica Neue")
+            .attr("font-style", "italic")
+</script>
+<center>
+    <h2>Here are the best teams we found for {{playerName}}: </h2>
+    {% for name in result %}
+        <p>{{ name }}&nbsp&nbsp&nbsp&nbsp&nbsp<a href={{ urls[loop.index0] }}>wiki link</a></p>
+    {% endfor %}
+</center>
+</body>
+<script>
+    svg1 = d3.select("body")
+                .append("svg")
+                .attr("width", width)
+                .attr("height", 100);
+    svg1.append("rect")
+                .attr("x", width / 2 - 80)
+                .attr("y", 10)
+                .attr("width", 160)
+                .attr("height", 60)
+                .attr("rx", 10)
+                .attr("ry", 10)
+                .attr("fill", "#99CCFF")
+                .on("click", function () {
+                    goBack();
+                });
+    svg1.append("text")
+            .text("Go back")
+            .attr("x", width / 2 - 30)
+            .attr("y", 45)
+            .attr("font-size", "16px")
+            .attr("fill", "white")
+            .attr("font-family", "Helvetica Neue")
+            .attr("font-style", "italic")
+            .on("click", function () {
+                goBack();
+            });
+
+    function goBack() {
+        window.location.replace("http://127.0.0.1:5000/");
+    }
+</script>
 </html>
