--- a/app/templates/teamPerform.html
+++ b/app/templates/teamPerform.html
@@ -106,7 +106,7 @@
         {% endfor %}
     </table>
     {% for sea in season %}
-        <p>{{ sea }}:&nbsp&nbsp&nbsp&nbsp&nbsp{{ comment[loop.index0] }}</p>
+        <p>{{ sea }}&nbsp Season:&nbsp&nbsp&nbsp&nbsp&nbsp{{ comment[loop.index0] }}</p>
     {% endfor %}
 </center>
 </body>
