fix button name

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -132,8 +132,8 @@
                     simTeam();
                 });
         svg1.append("text")
-                .text("Similar team")
-                .attr("x", width / 2 - 45)
+                .text("Suitable team")
+                .attr("x", width / 2 - 50)
                 .attr("y", 245)
                 .attr("font-size", "16px")
                 .attr("fill", "white")
